--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -7,20 +7,18 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "@angular-devkit/build-angular:application",
+      "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/dashboard",
         "index": "apps/dashboard/src/index.html",
-        "browser": "apps/dashboard/src/main.ts",
+        "main": "apps/dashboard/src/main.ts",
         "polyfills": ["zone.js"],
         "tsConfig": "apps/dashboard/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
-          {
-            "glob": "**/*",
-            "input": "apps/dashboard/public"
-          }
+          "apps/dashboard/src/favicon.ico",
+          "apps/dashboard/src/assets"
         ],
         "styles": ["apps/dashboard/src/styles.scss"],
         "scripts": []
@@ -51,6 +49,9 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": {
+        "buildTarget": "dashboard:build:development"
+      },
       "configurations": {
         "production": {
           "buildTarget": "dashboard:build:production"
@@ -64,7 +65,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "dashboard:build"
+        "browserTarget": "dashboard:build"
       }
     },
     "lint": {
