--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.14",
+    "@angular/cdk": "^19.2.0",
     "@angular/common": "^19.2.14",
     "@angular/compiler": "^19.2.14",
     "@angular/core": "^19.2.14",
@@ -22,6 +24,10 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@ngrx/effects": "^19.2.0",
+    "@ngrx/entity": "^19.2.0",
+    "@ngrx/store": "^19.2.0",
+    "@ngrx/store-devtools": "^19.2.0",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
@@ -39,17 +45,12 @@
     "@angular-devkit/build-angular": "^19.2.14",
     "@angular-devkit/core": "~19.2.0",
     "@angular-devkit/schematics": "~19.2.0",
-    "@angular/cdk": "^19.2.0",
     "@angular/cli": "^19.2.14",
     "@angular/compiler-cli": "^19.2.14",
     "@angular/language-service": "~19.2.0",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@ngrx/effects": "^19.2.0",
-    "@ngrx/entity": "^19.2.0",
-    "@ngrx/store": "^19.2.0",
-    "@ngrx/store-devtools": "^19.2.0",
     "@nrwl/nest": "^19.8.4",
     "@nx/angular": "^21.1.2",
     "@nx/devkit": "21.1.2",
@@ -69,6 +70,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
